--- a/Annadata/app/src/main/res/layout/activity_food_donate.xml
+++ b/Annadata/app/src/main/res/layout/activity_food_donate.xml
@@ -164,7 +164,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/primaryTextColor"
-            android:hint="Food Information"
+            android:hint="@string/finfo"
             android:inputType="textPostalAddress"
             android:maxLines="1"
             android:padding="12dp" />
@@ -180,7 +180,7 @@
         android:fontFamily="@font/adamina"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
-        android:text="Food Date"
+        android:text="@string/fdate"
         android:textColor="#047BD5"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/act_f_d__totalefood"
@@ -230,7 +230,8 @@
         app:layout_constraintStart_toEndOf="@+id/act_f_d__submit"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:contentDescription="@string/dsec" />
 
     <ImageView
         android:layout_width="100dp"
@@ -239,7 +240,8 @@
         android:src="@drawable/apple1"
         app:layout_constraintEnd_toStartOf="@+id/act_f_d__textView2"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:contentDescription="@string/dsec" />
 
 
 
