--- a/Annadata/app/src/main/res/layout/activity_delivery_conform.xml
+++ b/Annadata/app/src/main/res/layout/activity_delivery_conform.xml
@@ -4,48 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
-    android:layout_marginEnd="20dp"
-    android:background="@drawable/card1_image"
+    android:background="@drawable/bg8"
     tools:context=".activitys.DeliveryConform">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginStart="40dp"
-        android:text="@string/delivery"
-        android:textColor="#DD2C00"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:layout_width="400dp"
-        android:layout_height="35dp"
-        android:contentDescription="@string/dsec"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/rec4"
+    <RelativeLayout
+        android:layout_width="290dp"
+        android:layout_height="315dp"
+        android:layout_marginTop="160dp"
+        android:background="@drawable/border_textview"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints">
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/relativeLayout7"
-        android:layout_width="285dp"
-        android:layout_height="310dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/border_edittext"
+        android:layout_width="283dp"
+        android:layout_height="308dp"
+        android:layout_marginTop="163dp"
+        android:background="@drawable/border_information"
         android:elevation="10dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
 
@@ -53,10 +41,7 @@
             android:id="@+id/adcsellerfoodinfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:fontFamily="@font/adamina"
+            android:fontFamily="@font/cantata_one"
             android:text="@string/TextView"
             android:textColor="#043353"
             android:textSize="17sp" />
@@ -65,14 +50,15 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="40dp">
 
             <TextView
                 android:id="@+id/adcbuyername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="50dp"
+                android:fontFamily="@font/titillium_web"
                 android:text="@string/TextView"
                 android:textAlignment="viewEnd"
                 android:textColor="#095D6A"
@@ -87,6 +73,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_toEndOf="@+id/adcbuyername"
                 android:text="@string/TextView"
+                android:fontFamily="@font/titillium_web"
                 android:textAlignment="viewEnd"
                 android:textColor="#242121"
                 android:textSize="14sp" />
@@ -102,14 +89,15 @@
             android:textAlignment="center"
             android:textColor="#884A6F"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/adamina" />
 
         <TextView
             android:id="@+id/adcfoodweight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="13dp"
             android:text="@string/TextView"
+            android:fontFamily="@font/caudex"
             android:textAlignment="center"
             android:textColor="#166138"
             android:textSize="15sp"
@@ -123,6 +111,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/TextView"
             android:textColor="#8F8F29"
+            android:fontFamily="@font/baumans"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -132,7 +121,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/TextView"
-            android:textColor="#AE0000"
+            android:fontFamily="@font/titillium_web"
+            android:textColor="#CBAE0000"
             android:textSize="12sp" />
     </LinearLayout>
 
@@ -140,13 +130,13 @@
         android:id="@+id/adcconformbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="60dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="100dp"
         android:background="@drawable/sumit_button"
-        android:textStyle="bold"
-        android:textColor="@color/whiteTextColor"
         android:text="@string/conform"
+        android:textColor="@color/whiteTextColor"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout7" />
