--- a/Annadata/app/src/main/res/layout/activity_food_buy.xml
+++ b/Annadata/app/src/main/res/layout/activity_food_buy.xml
@@ -19,7 +19,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="-11dp"
         android:elevation="2dp"
-        android:src="@drawable/cloud">
+        android:src="@drawable/cloud"
+        android:contentDescription="@string/dsec">
 
     </ImageView>
 
@@ -37,7 +38,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="-11dp"
         android:elevation="2dp"
-        android:src="@drawable/cloud"/>
+        android:src="@drawable/cloud"
+        android:contentDescription="@string/dsec" />
 
 </RelativeLayout>
 
@@ -53,7 +55,8 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:elevation="2dp"
-        android:src="@drawable/cloud">
+        android:src="@drawable/cloud"
+        android:contentDescription="@string/dsec">
 
     </ImageView>
 
@@ -74,7 +77,8 @@
         android:layout_marginTop="30dp"
         android:layout_toEndOf="@+id/shop"
         android:elevation="2dp"
-        android:src="@drawable/cloud">
+        android:src="@drawable/cloud"
+        android:contentDescription="@string/dsec">
 
     </ImageView>
 
