--- a/Annadata/app/src/main/res/layout/activity_food_retail.xml
+++ b/Annadata/app/src/main/res/layout/activity_food_retail.xml
@@ -32,7 +32,7 @@
             android:layout_gravity="bottom|center"
             android:fontFamily="@font/playfair_display"
             android:padding="20dp"
-            android:text="Food\nSell"
+            android:text="@string/fsell"
             android:textAlignment="center"
             android:textColor="#EA80FC"
             android:textSize="25sp"
@@ -42,8 +42,9 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:padding="50dp"
-            android:background="@drawable/foodsell4"
-            android:layout_marginTop="10dp">
+            android:background="@drawable/fsell"
+            android:layout_marginTop="10dp"
+            android:contentDescription="@string/dsec">
         </ImageView>
     </androidx.cardview.widget.CardView>
 
@@ -71,7 +72,7 @@
             android:layout_gravity="bottom|center"
             android:fontFamily="@font/playfair_display"
             android:padding="20dp"
-            android:text="Food Donate"
+            android:text="@string/fdonate"
             android:textAlignment="center"
             android:textColor="#EA80FC"
             android:textSize="25sp"
@@ -82,7 +83,7 @@
             android:layout_height="100dp"
             android:src="@drawable/fooddoante"
             android:layout_marginTop="10dp"
-            >
+            android:contentDescription="@string/dsec">
 
         </ImageView>
     </androidx.cardview.widget.CardView>
