--- a/Annadata/app/src/main/res/layout/activity_history_donate.xml
+++ b/Annadata/app/src/main/res/layout/activity_history_donate.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4BDD9FE8"
     android:orientation="vertical"
-    tools:context=".activitys.FoodDelivery">
+    tools:context=".activitys.HistoryDonate">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="18dp"
         android:fontFamily="@font/coustard"
-        android:text="@string/delivery_section"
+        android:textSize="20sp"
+        android:layout_margin="18dp"
+        android:text="@string/donate"
         android:textAlignment="center"
-        android:textColor="#B8360E"
-        android:textSize="20sp" />
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fdrcycledelivery"
+        android:id="@+id/act_his_donate_cycle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp" />
-
+        android:layout_marginStart="2dp"
+        android:elevation="3dp"
+        android:layout_marginEnd="2dp"/>
 </LinearLayout>
