--- a/Annadata/app/src/main/res/layout/activity_profile.xml
+++ b/Annadata/app/src/main/res/layout/activity_profile.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/border_edittext"
         android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
-        android:text="Log Out"
+        android:text="@string/logout"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="12sp"
@@ -26,16 +26,6 @@
         tools:ignore="MissingConstraints" />
 
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="50dp"
-        android:foregroundGravity="center"
-        android:src="@drawable/profile_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circleImageView2"
@@ -55,7 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="32dp"
-        android:text="User Name"
+        android:text="@string/uname"
+        android:fontFamily="@font/coustard"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="Cart  Money"
+            android:text="Money"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -89,7 +80,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/money"
             android:layout_marginTop="18dp"
-            android:elevation="3dp"
+            android:elevation="5dp"
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/dsec" />
 
@@ -100,7 +91,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:padding="20dp"
-            android:text="$100"
+            android:text="@string/TextView"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -133,7 +124,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="Donate Point"
+            android:text="@string/point"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -145,56 +136,23 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:padding="20dp"
-            android:text="100"
+            android:text="@string/TextView"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold" />
     </RelativeLayout>
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/relativeLayout4"
-        android:layout_width="120dp"
-        android:layout_height="180dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        app:cardBackgroundColor="#FFDCDC"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="0dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
-        tools:ignore="MissingConstraints">
-
-        <ImageView
-            android:id="@+id/prohistorybuttton"
-            android:layout_width="120dp"
-            android:layout_height="140dp"
-            android:layout_gravity="center"
-            android:rotation="20"
-            android:src="@drawable/history" />
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="-5dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_bookmark_24dp" />
-
-    </androidx.cardview.widget.CardView>
-
     <ImageView
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="50dp"
         android:layout_marginBottom="4dp"
+        android:layout_marginTop="200dp"
+        android:contentDescription="@string/dsec"
         android:src="@drawable/patton2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
         tools:ignore="MissingConstraints">
 
     </ImageView>
