--- a/Annadata/app/src/main/res/layout/activity_sell_conform.xml
+++ b/Annadata/app/src/main/res/layout/activity_sell_conform.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg4"
+    android:background="@drawable/bg3"
     tools:context=".activitys.SellConform">
 
     <ImageView
@@ -22,49 +22,49 @@
         android:id="@+id/scusername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
         android:text="@string/TextView"
-        android:textColor="#955F11"
-        android:textSize="30sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/coustard"
+        android:textColor="#000"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+<RelativeLayout
+    android:layout_width="275dp"
+    android:layout_height="225dp"
+    android:orientation="vertical"
+    android:background="@drawable/border_textview"
+    android:layout_marginTop="70dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/scusername">
 
+</RelativeLayout>
     <LinearLayout
         android:id="@+id/relativeLayout5"
         android:layout_width="270dp"
         android:layout_height="220dp"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="73dp"
         android:elevation="10dp"
-        android:background="@drawable/border_edittext"
+        android:background="@drawable/border_information"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scusername"
         tools:ignore="MissingConstraints">
 
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="4dp"
-            android:elevation="4dp"
-            android:src="@drawable/sale"
-            android:layout_marginEnd="-12dp"
-            android:layout_gravity="end|top"/>
-
-
         <TextView
             android:id="@+id/scfoodname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_gravity="center"
-            android:fontFamily="@font/adamina"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/cantata_one"
             android:text="@string/TextView"
-            android:textColor="#000"
+            android:textColor="#B5000000"
             android:textSize="20sp" />
 
 
@@ -72,7 +72,7 @@
             android:id="@+id/scfoodvalue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="25dp"
             android:layout_gravity="center"
             android:fontFamily="@font/antic"
             android:text="@string/TextView"
@@ -83,8 +83,9 @@
             android:id="@+id/scfoodweight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/titillium_web"
             android:text="@string/TextView"
             android:textColor="#664998"
             android:textSize="15sp" />
@@ -93,22 +94,24 @@
             android:id="@+id/scfoodtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/titillium_web"
             android:text="@string/TextView"
             android:textColor="#166A8F"
-            android:textSize="12sp" />
+            android:textSize="13sp" />
 
 
         <TextView
             android:id="@+id/scfooddate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/caudex"
             android:text="@string/TextView"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="10sp" />
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
@@ -119,6 +122,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginTop="3dp"
         android:text="@string/TextView"
+        android:fontFamily="@font/baumans"
         android:textColor="#18A15E"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +131,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:elevation="4dp"
         android:orientation="vertical"
@@ -145,13 +149,14 @@
             android:layout_marginStart="8dp"
             android:ems="10"
             android:gravity="start|top"
-            android:hint="Enter Address To Deliver Food"
+            android:hint="@string/addf"
             android:inputType="textMultiLine"
             android:textColorHint="#4C2B51"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout5"
-            app:layout_constraintVertical_bias="0.185" />
+            app:layout_constraintVertical_bias="0.185"
+            android:autofillHints="" />
 
 
         <EditText
@@ -161,10 +166,11 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:ems="10"
-            android:hint="Enter Number of Order"
+            android:hint="@string/or"
             android:inputType="number"
             android:textAlignment="center"
-            android:textColorHint="#2B029F" />
+            android:textColorHint="#2B029F"
+            android:autofillHints="" />
 
         <Button
             android:id="@+id/scordertime"
@@ -174,7 +180,7 @@
             android:background="@drawable/border_edittext"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:text="Order Time"
+            android:text="@string/otime"
             android:textColor="#047BD5" />
 
     </LinearLayout>
@@ -184,18 +190,16 @@
         android:id="@+id/scconformbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/conform"
-        android:textStyle="bold"
-        android:textColor="@color/whiteTextColor"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/sumit_button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/conform"
+        android:textColor="@color/whiteTextColor"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
 
 
