--- a/Annadata/app/src/main/res/layout/activity_user_history.xml
+++ b/Annadata/app/src/main/res/layout/activity_user_history.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:gl="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/loginBkColor"
@@ -43,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="HISTORY"
+        android:text="@string/history"
         android:textStyle="bold"
         android:textSize="36sp"
         android:textColor="@android:color/white"
@@ -53,7 +52,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/act_his_sell"
         android:layout_width="200dp"
         android:layout_height="120dp"
         android:focusableInTouchMode="true"
@@ -90,7 +89,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
+        android:id="@+id/act_his_donate"
         android:layout_width="200dp"
         android:layout_height="120dp"
         android:focusableInTouchMode="true"
@@ -98,7 +97,7 @@
         app:cardCornerRadius="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/act_his_sell"
         tools:ignore="MissingConstraints">
 
         <RelativeLayout
@@ -124,42 +123,6 @@
 
         </RelativeLayout>
 
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="200dp"
-        android:layout_height="120dp"
-        app:cardCornerRadius="14dp"
-        android:focusableInTouchMode="true"
-
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.72"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
-        tools:ignore="MissingConstraints">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradiant4">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:padding="10dp"
-                android:text="@string/delhistory"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
