--- a/Annadata/app/src/main/res/layout/food_delivery_card.xml
+++ b/Annadata/app/src/main/res/layout/food_delivery_card.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:layout_marginTop="4dp"
@@ -19,7 +18,8 @@
             android:layout_marginStart="20dp"
             android:src="@drawable/delivery"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/dsec" />
         <TextView
             android:id="@+id/fdcbuyername"
             android:layout_width="wrap_content"
@@ -27,6 +27,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:text="@string/TextView"
+            android:fontFamily="@font/titillium_web"
             android:textAlignment="viewEnd"
             android:textColor="#9319A8"
             android:textSize="16sp"
@@ -41,6 +42,7 @@
             android:layout_marginBottom="16dp"
             android:text="@string/TextView"
             android:textSize="16sp"
+            android:fontFamily="@font/titillium_web"
             android:textAlignment="viewEnd"
             android:textColor="#88159C"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -51,11 +53,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:text="@string/TextView"
+            android:fontFamily="@font/cantata_one"
             android:textColor="#AE053E"
             android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,6 +68,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
             android:text="@string/TextView"
+            android:fontFamily="@font/baumans"
             android:textSize="14sp"
             android:textAlignment="center"
             android:textColor="#FF4081"
@@ -78,10 +81,12 @@
             android:id="@+id/fdcordertime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:textSize="12sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="4dp"
+            android:fontFamily="@font/caudex"
             android:text="@string/TextView"
+            android:textSize="12sp"
+            android:textColor="@android:color/primary_text_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
