--- a/Annadata/app/src/main/res/layout/food_sell_card.xml
+++ b/Annadata/app/src/main/res/layout/food_sell_card.xml
@@ -17,7 +17,6 @@
         android:foreground="@drawable/ic_login_bk">
 
         <ImageView
-            android:id="@+id/imageView"
             android:layout_width="50dp"
             android:layout_height="100dp"
             android:layout_marginTop="-20dp"
@@ -27,7 +26,8 @@
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints">
+            tools:ignore="MissingConstraints"
+            android:contentDescription="@string/dsec">
 
         </ImageView>
 
@@ -37,12 +37,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="80dp"
-            android:fontFamily="@font/adamina"
+            android:fontFamily="@font/cantata_one"
             android:text="@string/txtv"
             android:textAllCaps="true"
             android:textColor="#000"
             android:textSize="17sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -67,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="@string/TextView"
+                android:fontFamily="@font/antic"
                 android:textAlignment="center"
                 android:textColor="#117168"
                 android:textSize="17sp" />
@@ -79,9 +79,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:textSize="12sp"
             android:text="@string/TextView"
+            android:fontFamily="@font/titillium_web"
             android:textColor="#9E640F"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/carttimesell"
@@ -92,7 +93,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/TextView"
-            android:textSize="10sp"
+            android:textSize="12sp"
+            android:fontFamily="@font/baumans"
             android:layout_marginTop="30dp"
             android:textAlignment="viewEnd"
             android:textColor="#AF0000"
@@ -108,7 +110,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="76dp"
-            android:text="TextView"
+            android:text="@string/TextView"
+            android:fontFamily="@font/titillium_web"
             android:textColor="#BD431C"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,9 +124,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:textSize="7sp"
+            android:fontFamily="@font/caudex"
             android:text="@string/TextView"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cartweightsell" />
