--- a/Annadata/app/src/main/res/values/preloaded_fonts.xml
+++ b/Annadata/app/src/main/res/values/preloaded_fonts.xml
@@ -5,7 +5,12 @@
         <item>@font/almendra_bold</item>
         <item>@font/antic</item>
         <item>@font/baloo</item>
+        <item>@font/baumans</item>
+        <item>@font/cantata_one</item>
+        <item>@font/caudex</item>
+        <item>@font/coustard</item>
         <item>@font/playfair_display</item>
         <item>@font/roboto_medium</item>
+        <item>@font/titillium_web</item>
     </array>
 </resources>
